Metodos get y buscar en abogados 34.19

--- a/JuriX.Server/appsettings.json
+++ b/JuriX.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "cadenaSQL": "Server=DESKTOP-VHR6U9D\\SQLEXPRESS; DataBase=Jurix; Trusted_Connection=True; TrustServerCertificate=True;"
+    "cadenaSQL": "Server=.\\SQLEXPRESS; DataBase=Jurix; Trusted_Connection=True; TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
